fix: minor visual bug fixes after angular 15 migration * added user style to defaultConfig.json in apps it was missing, since it now won't load without it * fixed mailing lists checkbox misalignment * added the visibility icon to the form field in settings-samba-password.component * fixed a bug that made password form jump when spinner was visible (global spinner margin was removed, it was added just for a slight visual change, I believe we can do without it)

--- a/apps/admin-gui/src/_styles.scss
+++ b/apps/admin-gui/src/_styles.scss
@@ -1682,11 +1682,6 @@ table .mdc-text-field--outlined {
   flex-wrap: wrap;
 }
 
-// extra spinner padding in dialog
-.mat-mdc-dialog-container .mat-mdc-progress-spinner {
-  margin: 24px;
-}
-
 .mat-mdc-checkbox label,
 .mat-mdc-radio-button label,
 .mat-mdc-slide-toggle label {
