--- a/apps/publications/src/_styles.scss
+++ b/apps/publications/src/_styles.scss
@@ -436,11 +436,6 @@ mat-form-field mat-icon {
   letter-spacing: normal;
 }
 
-// extra spinner padding in dialog
-.mat-mdc-dialog-container .mat-mdc-progress-spinner {
-  margin: 24px;
-}
-
 .mat-mdc-checkbox label,
 .mat-mdc-radio-button label,
 .mat-mdc-slide-toggle label {
